# BasketBallCoach

./: .gitignore  README.md  helper_V3.py  main.py  pyproject.toml  streamlit_V3.py
media/videos/1080p60/partial_movie_files/Systeme_basketball/: partial_movie_file_list.txt
