[project]
name = "basketballcoach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "manim>=0.19.0",
    "matplotlib>=3.10.1",
    "streamlit>=1.44.1",
    "streamlit-extras>=0.6.0",
    "streamlit-image-coordinates>=0.1.9",
]
